--- a/web/themes/custom/local/scss/style.scss
+++ b/web/themes/custom/local/scss/style.scss
@@ -40,7 +40,7 @@ h3 {
 }
 
 h3 {
-    margin: 2rem 0;
+    margin: 2rem 0 0.5rem;
 }
 
 p {
@@ -54,6 +54,10 @@ a:hover {
 
 #main img {
     max-width: 100%;
+}
+
+hr {
+    clear: both;
 }
 
 /* COLORS 
